# django-fun

./: .env  .gitignore  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: app-test.yaml  test-type-based-creator.yaml
apps/type_based_creator/: __init__.py  apps.py  asgi.py  error_handler.py  errors.py  handler.py  models.py  serializers.py  settings.py  signals.py  urls.py  views.py  wsgi.py
apps/type_based_creator/tests/: __init__.py  test_base.py  test_cool_table_endpoint.py  test_row_endpoint.py  test_table_endpoint.py
